# Craft

./: .gitignore  CMakeLists.txt
src/: auth.c  main.c  main.cpp  util.c  util.h
